# lib-ml

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml
lib_ml_remla24_team02/: data_preprocessing.py
lib_ml_remla24_team02/data/: char_index.joblib  label_encoder.joblib
